updated to uuid, fixed middlewares, added dotenv, fixed port issue, added cors
